--- a/entries/entry7/final/style.css
+++ b/entries/entry7/final/style.css
@@ -1,4 +1,4 @@
-img {
+.new {
     width: 60px;
                 height: 70px;
                 position: fixed;
@@ -97,11 +97,7 @@ font-style: normal;
 
 
 
-.st0, image {scale: 25%;
 
-    position: relative;
-    left: 200px;
-}
   
 
 
@@ -124,7 +120,7 @@ font-style: normal;
     font-family: "neulis-neue-hairline", sans-serif;
 font-weight: 100;
 font-style: normal;
-top: -600px;
+top: -150px;
 
 }    
 
@@ -151,9 +147,41 @@ top: -600px;
     .st0, image {scale: 35%;}
   }
 
+.allstar { 
+    position: relative;
+    max-width: 130%;
+    margin-left: 100px;
+ }
 
 
+.star1 {
+    position: relative;
+    top: 0px;
+    left: 50%;
+    width: 110%;
+    height: 110%;
+}
 
 
+.star2 {
+    position: relative;
+    top: -50%;
+    width: 110%;
+    height: 110%;
+}
 
+.star3 {
+    position: relative;
+    top: -10000px;
+    width: 110%;
+    height: 110%;
+}
+
+
+.star4 {
+    position: relative;
+    top: -700px;
+    width: 110%;
+    height: 110%;
+}
 
