--- a/style.css
+++ b/style.css
@@ -91,7 +91,12 @@ img {z-index: 1}
     flex-direction: row, column; justify-content: space-evenly, 20px;
     height: 300px;
     margin: 50px; 
- text-align: center;} 
+ text-align: center;
+ font-family: "miller-display", serif;
+  font-weight: 400;
+  font-style: normal; 
+}
+
 
  div { margin-left: 50px;
  margin-right:50px; 
